Backend-api/Infra/kind-manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend
  labels:
    app: auth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
        - name: auth-backend
          image: auth-backend:1.0.0
          ports:
            - containerPort: 3000
