Backend-api/Infra/kind-manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-frontend
  labels:
    app: auth-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-frontend
  template:
    metadata:
      labels:
        app: auth-frontend
    spec:
      containers:
        - name: auth-frontend
          image: auth-frontend:1.0.0
          ports:
            - containerPort: 80
