Backend-api/Infra/kind-manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-backend
spec:
  selector:
    app: auth-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
