Backend-api/Infra/kind-manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-frontend
spec:
  selector:
    app: auth-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
