Backend-api/Infra/kind-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: auth-backend
                port:
                  number: 3000
